--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/text_name"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_alignParentStart="true"
         android:padding="8dp"
+        style="@style/HighLightedInformation"
         android:text="Alimento" />
 
     <TextView
         android:id="@+id/text_calories"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        style="@style/DefaultInformation"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_alignParentEnd="true"
         android:padding="8dp"
         android:text="Caloria" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/text_quantity"
+        style="@style/DefaultInformation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_name"
+        android:padding="8dp"
+        android:text="Qnt" />
+
+    <TextView
+        android:id="@+id/text_unit"
+        android:layout_width="wrap_content"
+        style="@style/DefaultInformation"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_name"
+        android:layout_toEndOf="@+id/text_quantity"
+        android:padding="8dp"
+        android:text="Un" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey"
+        android:layout_below="@+id/text_unit" />
+
+</RelativeLayout>
