--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -28,7 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_name"
-        android:padding="8dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="0dp"
         android:text="Qnt" />
 
     <TextView
@@ -38,7 +40,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_name"
         android:layout_toEndOf="@+id/text_quantity"
-        android:padding="8dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="0dp"
         android:text="Un" />
 
     <View
